[gd_scene load_steps=2 format=2]

[ext_resource path="res://cena2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 232.0
margin_top = 19.0
margin_right = 782.0
margin_bottom = 33.0
text = "2-Crie uma lista vázia, preencha com os dados enviados pelo usuário e mostre na tela"

[node name="item1" type="LineEdit" parent="."]
margin_left = 139.0
margin_top = 63.0
margin_right = 298.0
margin_bottom = 91.0

[node name="Label2" type="Label" parent="."]
margin_left = 85.0
margin_top = 71.0
margin_right = 143.0
margin_bottom = 85.0
text = "Item 1"

[node name="Label3" type="Label" parent="."]
margin_left = 84.0
margin_top = 125.0
margin_right = 128.0
margin_bottom = 139.0
text = "Item 2"

[node name="Label4" type="Label" parent="."]
margin_left = 81.0
margin_top = 242.0
margin_right = 132.0
margin_bottom = 256.0
text = "Item 4"

[node name="Label5" type="Label" parent="."]
margin_left = 85.0
margin_top = 183.0
margin_right = 145.0
margin_bottom = 197.0
text = "Item 3"

[node name="item2" type="LineEdit" parent="."]
margin_left = 140.0
margin_top = 112.0
margin_right = 299.0
margin_bottom = 140.0

[node name="item3" type="LineEdit" parent="."]
margin_left = 139.0
margin_top = 166.0
margin_right = 298.0
margin_bottom = 194.0

[node name="item4" type="LineEdit" parent="."]
margin_left = 141.0
margin_top = 228.0
margin_right = 300.0
margin_bottom = 256.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 294.0
margin_top = 355.0
margin_right = 730.0
margin_bottom = 544.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 29.0
margin_top = 15.0
margin_right = 408.0
margin_bottom = 174.0

[node name="Button" type="Button" parent="."]
margin_left = 147.0
margin_top = 287.0
margin_right = 298.0
margin_bottom = 331.0
text = "Aperte quando preencher os itens."

[node name="voltar" type="Button" parent="."]
margin_left = 402.0
margin_top = 554.0
margin_right = 626.0
margin_bottom = 592.0
text = "Voltar"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
